[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[provider]
cluster = "testnet"
wallet = "~/.config/solana/id.json"  # Ensure this path matches your keypair file

